# UNIVERSAL_SGEMM_CUDA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: correctness_validation.sh  draw_line.py
src/: kernels.cuh  matrix_utils.cuh  runner.cuh  sgemm.cu
src/kernels/: blocktiling_1d.cuh  blocktiling_2d.cuh  global_mem_coalescing.cuh  naive.cuh  shared_mem.cuh  vectorize.cuh  vectorize_v2.cuh
